Fixes channel alignment and rename top content to my edition

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1180,14 +1180,14 @@ ul.channels {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   padding-top: 120;
-  left: 20px;
+  left: 240px;
   top: 0;
   border-top: 200px;
   position: absolute;
   bottom: 0;
   padding-bottom: 50%;
 }
-/* line 472, ../../stylesheets/ui.scss */
+/* line 473, ../../stylesheets/ui.scss */
 ul.channels li {
   position: relative;
   -webkit-box-sizing: border-box;
@@ -1205,7 +1205,7 @@ ul.channels li {
   background-color: rgba(0, 0, 0, 0.5);
   background-size: cover;
 }
-/* line 493, ../../stylesheets/ui.scss */
+/* line 491, ../../stylesheets/ui.scss */
 ul.channels .action {
   font-family: "Georgia";
   position: absolute;
@@ -1228,15 +1228,15 @@ ul.channels .action {
   color: white;
   border: 1.5px solid rgba(255, 255, 255, 0.3);
 }
-/* line 513, ../../stylesheets/ui.scss */
+/* line 511, ../../stylesheets/ui.scss */
 ul.channels .action.followed {
   background: rgba(240, 69, 0, 0.2);
 }
-/* line 517, ../../stylesheets/ui.scss */
+/* line 515, ../../stylesheets/ui.scss */
 ul.channels .action:hover {
   background: rgba(255, 255, 255, 0.2);
 }
-/* line 521, ../../stylesheets/ui.scss */
+/* line 519, ../../stylesheets/ui.scss */
 ul.channels .action.view {
   left: 130px;
 }
@@ -1805,27 +1805,30 @@ article.page .description {
   width: 100%;
   border-top: 90px;
   padding: 0 0;
+  left: 20px;
 }
-/* line 320, ../../stylesheets/page.scss */
+/* line 321, ../../stylesheets/page.scss */
 #signup.page ul.channels a.follow {
+  position: absolute;
   -webkit-border-radius: 80px;
   -moz-border-radius: 80px;
   -ms-border-radius: 80px;
   -o-border-radius: 80px;
   border-radius: 80px;
-  margin-left: 50px;
+  left: 50%;
   font-weight: bold;
   line-height: 120px;
+  margin-left: -60px;
   text-align: center;
   width: 120px;
   height: 120px;
 }
-/* line 330, ../../stylesheets/page.scss */
+/* line 333, ../../stylesheets/page.scss */
 #signup.page ul.channels li {
   width: 315px;
   height: 260px;
 }
-/* line 336, ../../stylesheets/page.scss */
+/* line 339, ../../stylesheets/page.scss */
 #signup.page h1 {
   margin-top: 40px;
   text-align: center;
@@ -1834,7 +1837,7 @@ article.page .description {
   font-weight: normal;
   text-transform: uppercase;
 }
-/* line 345, ../../stylesheets/page.scss */
+/* line 348, ../../stylesheets/page.scss */
 #signup.page a.complete {
   font-family: "proxima_nova", "Helvetica Neue";
   position: absolute;
@@ -1845,7 +1848,7 @@ article.page .description {
   line-height: 50x;
 }
 
-/* line 356, ../../stylesheets/page.scss */
+/* line 359, ../../stylesheets/page.scss */
 .flash, .notice, .alert {
   position: absolute;
   top: 45px;
